--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: airmeter.io
 github_username:  airmeter-io
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
