--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: airmeter.io
 github_username:  airmeter-io
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
 
