--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: airmeter.io
 github_username:  airmeter-io
 
 # Build settings
-theme: portfolyou-jekyll-theme
+remote_theme: YoussefRaafatNasry/portfolYOU
 plugins:
   - jekyll-feed
 
