--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,10 @@
 title: airmeter.io
 email: contact@airmeter.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  AirMeter.io is an OpenSource platform that makes it easy to build a feature rich CO2 monitor
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: airmeter.io
+twitter_username: airmeterIO
 github_username:  airmeter-io
 
 # Build settings
