--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: airmeter.io
 email: contact@airmeter.io
 description: >- # this means to ignore newlines until "baseurl:"
-  AirMeter.io is an OpenSource platform that facilitates building Internet of Things (IoT) enabled CO2 monitoring devices.
+  AirMeter.io is an OpenSource platform for building Internet of Things (IoT) connected CO2 monitors.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: airmeterIO
